--- a/PythonBackend/requirements.txt
+++ b/PythonBackend/requirements.txt
@@ -59,6 +59,7 @@ google-crc32c==1.5.0
 google-pasta==0.2.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.62.0
+gunicorn
 h11==0.14.0
 h5py==3.9.0
 httpcore==1.0.6
