--- a/PythonBackend/requirements.txt
+++ b/PythonBackend/requirements.txt
@@ -112,6 +112,7 @@ python-dateutil==2.8.2
 python-dotenv==0.15.0
 pytz==2023.3.post1
 PyYAML==6.0.2
+pyzbar
 requests==2.32.3
 rich==13.7.0
 scikit-learn==1.3.2
