--- a/PythonBackend/requirements.txt
+++ b/PythonBackend/requirements.txt
@@ -202,6 +202,7 @@ scikit-learn==1.3.2
 scipy==1.11.4
 selenium==4.11.2
 Send2Trash==1.8.3
+setuptools==58.0.4
 six==1.15.0
 smmap==5.0.1
 sniffio==1.3.0
