--- a/PythonBackend/requirements.txt
+++ b/PythonBackend/requirements.txt
@@ -125,6 +125,7 @@ mongoose==0.0.1
 mpmath==1.3.0
 msgpack==1.0.8
 mysql-connector-python==8.0.23
+mysqlclient==2.1.1
 nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
@@ -202,7 +203,6 @@ scikit-learn==1.3.2
 scipy==1.11.4
 selenium==4.11.2
 Send2Trash==1.8.3
-setuptools==58.0.4
 six==1.15.0
 smmap==5.0.1
 sniffio==1.3.0
